--- a/scss/components/_vendors.scss
+++ b/scss/components/_vendors.scss
@@ -2,4 +2,5 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 @import "../../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
 @import "../../node_modules/animate.css/animate.min.css";
+@import "../../node_modules/bootstrap-icons/font/bootstrap-icons.css";
 
